Enhance UI with backdrop filters and improved card styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Бункер - Карты</h1>
-        
+        <div class="header-container">
+            <h1 class="text-center mb-4">Бункер - Карты</h1>
+        </div>
+
         <!-- Bunker Type Section -->
         <div class="bunker-type-section mb-5">
             <h2 class="text-center mb-3">Тип бункера</h2>
